# langchain-llamacpp-chat-model

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
examples/: invoke.py  llama_proxy.py  stream.py  structured_output.py  tools_calling.py
langchain_llamacpp_chat_model/: __init__.py  llama_chat_model.py  llama_client_async_proxy.py  llama_client_proxy.py  llama_cpp_chat_model.py  llama_proxy_chat_model.py
langchain_llamacpp_chat_model/proxy/: __init__.py  llama_proxy_chat_model.py
langgraph_agent_template/: main.py
tests/: test_llama_cpp_chat_model.py  test_llama_proxy_cpp_chat_model.py  test_main.py
tests/test_functional/: models_configuration.py  test_ainvoke.py  test_astream.py  test_function_calling.py  test_invoke.py  test_llama_proxy.py  test_llm_type.py  test_stream.py  test_system_message.py
